--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,7 @@ nsis/_internal.zip
 sign.txt
 parameters.json
 package-lock.json
-package/debian/desktopbraillerap-debian/usr/bin/desktopbraillerap-debian
-package/debian/desktopbraillerap-debian/usr/share/doc/desktopbraillerap-debian/changelog
-package/debian/desktopbraillerap-debian/usr/share/doc/desktopbraillerap-debian/changelog.gz
 desktop_brap_parameters.json
 test_export_elements_output.csv
 images/zzz_metro.png
+line_data_export.csv
