fix missing "tags" in node enumeration from osm

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,21 @@ pytest/osm_request.json
 line_extraction.csv
 pytest/data.json
 osm/bup_application_OSM_extraction.py
+amsterdam_subway_test.svg
+berlin_subway_test.svg
+data.json
+londres_subway_test.svg
+lyon_subway_test.svg
+.gitignore
+osm_request.json
+marseille_subway_test.svg
+lyon_funicular_test.svg
+osm_extraction.json
+paris_bus_test.svg
+paris_funicular_test.svg
+paris_subway_test.svg
+rennes_bus_test.svg
+rennes_subway_test.svg
+transport_graph_data.json
+osm/extraction_config.ini
+osm/extraction_config.ini
