--- a/osm/extraction_config.ini
+++ b/osm/extraction_config.ini
@@ -1,7 +1,7 @@
 # fichier de configuration du script python pour l'extraction des lignes de métro
 # à partir de Open Street Map
 [site name]
-place_name = Rennes 
+place_name = Amsterdam 
 
 [image 2D]
 image_folder = images
