remove test svg from git

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,31 @@ way.json
 test3.svg
 .gitignore
 osm2touch_parameters.json
+amsterdam_subway_station_test.svg
+amsterdam_subway_ways_test.svg
+berlin_subway_station_test.svg
+berlin_subway_ways_test.svg
+londres_subway_station_test.svg
+londres_subway_ways_test.svg
+lyon_funicular_station_test.svg
+lyon_funicular_ways_test.svg
+lyon_subway_station_test.svg
+lyon_subway_ways_test.svg
+marseille_subway_station_test.svg
+marseille_subway_ways_test.svg
+nantes_tram_station_test.svg
+nantes_tram_test.svg
+nantes_tram_ways_test.svg
+paris_funicular_station_test.svg
+paris_funicular_ways_test.svg
+paris_subway_station_test.svg
+paris_subway_ways_test.svg
+paris_tram_station_test.svg
+paris_tram_test.svg
+paris_tram_ways_test.svg
+rennes_bus_station_test.svg
+rennes_bus_ways_test.svg
+rennes_subway_station_test.svg
+rennes_subway_ways_test.svg
+svgtest.svg
+transit_data.json
