--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.4.5",
+    "leaflet": "^1.9.4",
     "npm-run-all": "^4.1.5",
     "purecss": "^3.0.0",
     "react": "^18.2.0",
     "react-accessible-treeview": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^5.0.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
