--- a/package/debian/osm2touch-debian/DEBIAN/control
+++ b/package/debian/osm2touch-debian/DEBIAN/control
@@ -1,5 +1,5 @@
-Package: osm2touch-debian
-Version: 0.7.0
+Package: openstreettouch-debian
+Version: 0.1.2
 Depends: libc6 (>=2.36-9+deb12u7), libc6 (<<2.37), zlib1g
 Section: utils
 Priority: optional
