--- a/package/ubuntu/osm2touch-ubuntu/DEBIAN/control
+++ b/package/ubuntu/osm2touch-ubuntu/DEBIAN/control
@@ -1,5 +1,5 @@
-Package: osm2touch-ubuntu
-Version: 0.7.0
+Package: openstreettouch-ubuntu
+Version: 0.1.2
 Section: utils
 Priority: optional
 HomePage: https://www.braillerap.org
