--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ osm/carte_interactive.html
 street_2d_data.json
 testsymbol.svg
 transport_graph_data_filtered.json
+nsis/OpenStreetTouch_Windows_setup.exe
