remove executable from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@ street_2d_data.json
 testsymbol.svg
 transport_graph_data_filtered.json
 nsis/OpenStreetTouch_Windows_setup.exe
+nsis/OpenStreetTouch.exe
