--- a/package.json
+++ b/package.json
@@ -35,16 +35,16 @@
     "packageubuntu": "pyinstaller LinuxOsm2Touch.spec",
     "build-deb-debian": "npm-run-all mkdirdebian cpdebian clogdebian dpkg-debian checkdebian",
     "build-deb-ubuntu": "npm-run-all mkdirubuntu cpubuntu clogubuntu dpkg-ubuntu checkubuntu",
-    "mkdirdebian": "mkdir -p ./package/debian/osm2touch-debian/usr/bin/",
-    "mkdirubuntu": "mkdir -p ./package/ubuntu/osm2touch-ubuntu/usr/bin/",
-    "clogdebian": "git-changelog -x -s v0.6.0 -f `git tag | tail -n 1` | gzip > ./package/debian/osm2touch-debian/usr/share/doc/osm2touch-debian/changelog.gz",
-    "cpdebian": "cp ./dist/osm2touch-debian ./package/debian/osm2touch-debian/usr/bin/",
-    "dpkg-debian": "dpkg-deb -v --root-owner-group --build ./package/debian/osm2touch-debian ./dist/osm2touch-debian-${npm_package_version}.deb",
-    "checkdebian": "lintian ./dist/osm2touch-debian-${npm_package_version}.deb",
-    "clogubuntu": "git-changelog -x -s v0.6.0 -f `git tag | tail -n 1` | gzip > ./package/ubuntu/osm2touch-ubuntu/usr/share/doc/osm2touch-ubuntu/changelog.gz",
-    "cpubuntu": "cp ./dist/osm2touch-ubuntu ./package/ubuntu/osm2touch-ubuntu/usr/bin/",
-    "dpkg-ubuntu": "dpkg-deb -v --root-owner-group --build ./package/ubuntu/osm2touch-ubuntu ./dist/osm2touch-ubuntu-${npm_package_version}.deb",
-    "checkubuntu": "lintian ./dist/osm2touch-ubuntu-${npm_package_version}.deb",
+    "mkdirdebian": "mkdir -p ./package/debian/openstreettouch-debian/usr/bin/",
+    "mkdirubuntu": "mkdir -p ./package/ubuntu/openstreettouch-ubuntu/usr/bin/",
+    "clogdebian": "git-changelog -x -s v0.6.0 -f `git tag | tail -n 1` | gzip > ./package/debian/openstreettouch-debian/usr/share/doc/openstreettouch-debian/changelog.gz",
+    "cpdebian": "cp ./dist/openstreettouch-debian ./package/debian/openstreettouch-debian/usr/bin/",
+    "dpkg-debian": "dpkg-deb -v --root-owner-group --build ./package/debian/openstreettouch-debian ./dist/openstreettouch-debian-${npm_package_version}.deb",
+    "checkdebian": "lintian ./dist/openstreettouch-debian-${npm_package_version}.deb",
+    "clogubuntu": "git-changelog -x -s v0.6.0 -f `git tag | tail -n 1` | gzip > ./package/ubuntu/openstreettouch-ubuntu/usr/share/doc/openstreettouch-ubuntu/changelog.gz",
+    "cpubuntu": "cp ./dist/openstreettouch-ubuntu ./package/ubuntu/openstreettouch-ubuntu/usr/bin/",
+    "dpkg-ubuntu": "dpkg-deb -v --root-owner-group --build ./package/ubuntu/openstreettouch-ubuntu ./dist/openstreettouch-ubuntu-${npm_package_version}.deb",
+    "checkubuntu": "lintian ./dist/openstreettouch-ubuntu-${npm_package_version}.deb",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "clean": "rm -rf build dist"
