--- a/.github/workflows/auto_build_for_ubuntu.yml
+++ b/.github/workflows/auto_build_for_ubuntu.yml
@@ -30,7 +30,7 @@ jobs:
             -e BOARD \
             -e BRANCH_BUILD=main\
             -v $(pwd)/dist/:/home/builduser/dist \
-            sgngodin/builddesktopbraillerap:latest
+            sgngodin/buildopenstreettouchubuntu:latest
 
      - name: check result files
        run: |
@@ -42,13 +42,13 @@ jobs:
              tag: ${{ github.ref }}
              overwrite: true
              file_glob: true
-             file: ./dist/desktopbraillerap-ubuntu-*
+             file: ./dist/openstreettouch-ubuntu-*
 
      - name: Upload artifact
        uses: actions/upload-artifact@v4.3.3
        with: 
-              name: desktopbraillerap-ubuntu
-              path: ./dist/desktopbraillerap-ubuntu-*
+              name: openstreettouch-ubuntu
+              path: ./dist/openstreettouch-ubuntu-*
      
      
               
